2005-12-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/x86_64/jmpbuf-unwind.h (_jmpbuf_sp): New inline function.
	(_JMPBUF_UNWINDS_ADJ): Use it, to PTR_DEMANGLE before comparison.
	* sysdeps/alpha/jmpbuf-unwind.h: Likewise.
	* sysdeps/i386/jmpbuf-unwind.h: Likewise.
	* sysdeps/mips/jmpbuf-unwind.h: Likewise.
	* sysdeps/powerpc/jmpbuf-unwind.h: Likewise.
	* sysdeps/s390/jmpbuf-unwind.h: Likewise.
	* sysdeps/sh/jmpbuf-unwind.h: Likewise.
	* sysdeps/sparc/sparc32/jmpbuf-unwind.h: Likewise.
	* sysdeps/sparc/sparc64/jmpbuf-unwind.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/jmpbuf-unwind.h: Likewise.

2005-12-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h: Add __next
	and __prev field to pthread_mutex_t.
	* sysdeps/unix/sysv/linux/ia64/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/pthreadtypes.h: Add __next field
	to pthread_mutex_t.

2005-12-26  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h: Define PTHREAD_MUTEX_ROBUST_PRIVATE_NP,
	PTHREAD_MUTEX_ROBUST_PRIVATE_RECURSIVE_NP,
	PTHREAD_MUTEX_ROBUST_PRIVATE_ERRORCHECK_NP,
	PTHREAD_MUTEX_ROBUST_PRIVATE_ADAPTIVE_NP,
	PTHREAD_MUTEXATTR_FLAG_ROBUST, PTHREAD_MUTEXATTR_FLAG_PSHARED,
	and PTHREAD_MUTEXATTR_FLAG_BITS.
	* descr.h (struct pthread): Add robust_list field and define
	ENQUEUE_MUTEX and DEQUEUE_MUTEX macros.
	* pthread_mutexattr_getrobust.c: New file.
	* pthread_mutexattr_setrobust.c: New file.
	* pthread_mutex_consistent.c: New file.
	* sysdeps/pthread/pthread.h: Declare pthread_mutexattr_getrobust,
	pthread_mutexattr_setrobust, and pthread_mutex_consistent.
	Define PTHREAD_MUTEX_STALLED_NP and PTHREAD_MUTEX_ROBUST_NP.
	Adjust pthread_mutex_t initializers.
	* nptl/sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h: Add __next
	field to pthread_mutex_t.