@@ -1,3 +1,8 @@
+2005-12-28  Ulrich Drepper  <drepper@redhat.com>
+
+	* Makefile (tests): Add tst-signal7.
+	* tst-signal7.c: New file.
+
 2005-12-27  Roland McGrath  <roland@redhat.com>
 
 	* sysdeps/x86_64/jmpbuf-unwind.h (_jmpbuf_sp): New inline function.
